refactor data package * split connections * add rabbitmq and kafka * add service methods
